Add article edit and update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <%= flash.each do |type, msg| %>
-      <%= msg %>
+    <% if notice %>
+      <%= notice %>
     <% end %>
     <%= yield %>
   </body>
