--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,8 +13,15 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>Placeholder</td>
+        <td>
+          <%= link_to 'Show', article_path(article) %>
+          <%= link_to 'Edit', edit_article_path(article) %>
+          <%= link_to 'Delete', article_path(article), method: :delete %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<br>
+<%= link_to 'Create new article', new_article_path %>
