--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th scope="col">Title</th>
       <th scope="col">Description</th>
-      <th scope="col">Actions</th>
+      <th scope="col" colspan="3">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -13,11 +13,9 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>
-          <%= link_to 'Show', article_path(article) %>
-          <%= link_to 'Edit', edit_article_path(article) %>
-          <%= link_to 'Delete', article_path(article), method: :delete %>
-        </td>
+        <td><%= link_to 'Show', article_path(article) %> |</td>
+        <td><%= link_to 'Edit', edit_article_path(article) %> |</td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %></td>
       </tr>
     <% end %>
   </tbody>
