Style index view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,13 +1,43 @@
 @import 'bootstrap/dist/css/bootstrap';
+@import 'variables';
 
 .navbar {
-  background-color: #FDF6EA !important;
-}
-  
-.navbar-brand {
-  font-size: 3rem;
+  background-color: $black !important;
 }
 
-h1 {
-  color: red;
+.nav-link {
+  color: $white !important;
+}
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: $white;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.jumbotron {
+  background-image: asset-url('blog-bg.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 425px;
+}
+
+// Sticky Footer Classes
+
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+  background-color: lightgrey;
+}
+
+#sticky-footer {
+  flex-shrink: none;
 }
