--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,30 @@
-<h1>Articles Listing Page</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Description</th>
-      <th scope="col" colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article_path(article) %> |</td>
-        <td><%= link_to 'Edit', edit_article_path(article) %> |</td>
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-<%= link_to 'Create new article', new_article_path %>
+<div id="page-content">
+  <h1 class="text-center my-4">Listing all articles</h1>
+  <div class="text-center">
+    <%= link_to 'Create new article', new_article_path, class: "btn btn-primary" %>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <% @articles.each do |article| %>
+        <div class="col-lg-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic">
+              by Michelle Magpuyo
+            </div>
+            <div class="card-body">
+              <h5 class="card-title text-success"><%= article.title %></h5>
+              <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+              <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to 'Delete', article_path(article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
