--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
       <div class="col-lg-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-header font-italic">
-            by Michelle Magpuyo
+            by <%= article.user.username %>
           </div>
           <div class="card-body">
             <h5 class="card-title text-success"><%= article.title %></h5>
