--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
   <div class="col-lg-8">
     <div class="card text-center shadow mb-5 bg-white rounded">
       <div class="card-header font-italic">
-        by Michelle Magpuyo
+        by <%= @article.user.username%>
       </div>
       <div class="card-body">
         <div class="card-text text-left"><%= simple_format(@article.description) %></div>
