Create signup form

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,16 @@
 <div class="container col-10">
-  <%= render 'shared/errors' %>
+  <%= render 'shared/errors', obj: @article %>
   <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
     <div class="form-group row align-items-center mx-0">
       <%= f.label :title, for: "title", class: "col-3 m-0 text-white" %><br/>
       <%= f.text_field :title, class: "form-control col-9 shadow rounded", id:"title", placeholder: "Enter title of article" %>
     </div>
+
     <div class="form-group row m-0">
       <%= f.label :description, for: "description", class: "col-3 0 text-white" %><br/>
       <%= f.text_area :description, rows: 10, class: "form-control col-9 shadow rounded", id:"description", placeholder: "Enter description of article"  %>
     </div>
+
     <div class="form-group row justify-content-center my-4">
       <%= f.submit class: "btn btn-outline-light"%>
     </div>
