--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="form-group row justify-content-center my-4">
-      <%= f.submit "Sign up",  class: "btn btn-outline-light"%>
+      <%= f.submit(@user.new_record? ? "Sign up" : "Update Account",  class: "btn btn-outline-light") %>
     </div>
   <% end %>
 </div>
