--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,3 +1,7 @@
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
 <div class="container">
   <div class="row justify-content-center">
     <% @articles.each do |article| %>
@@ -20,4 +24,8 @@
       </div>
     <% end %>
   </div>
+</div>
+
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
 </div>
