--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,14 @@
 <h1 class="text-center my-4">Listing all articles</h1>
+
 <div class="text-center">
   <%= link_to 'Create new article', new_article_path, class: "btn btn-primary" %>
 </div>
+
+<div class="flickr_pagination mt-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= render "article" %>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
