--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,11 @@
-<% if notice %>
+<% if notice || alert %>
   <div class="container">
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <%= notice %>
+      <% flash.each do |type, msg| %>
+        <div>
+          <%= msg %>
+        </div>
+      <% end %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
