--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,9 +14,15 @@
           Articles
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to "New Article", new_article_path, class: "dropdown-item"%>
-          <%= link_to "View Articles", articles_path, class: "dropdown-item"%>
+          <%= link_to "New Article", new_article_path, class: "dropdown-item" %>
+          <%= link_to "View Articles", articles_path, class: "dropdown-item" %>
         </div>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Login", login_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
