--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,5 +5,6 @@
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <%= link_to "Sign up", signup_path, class: "btn btn-success btn-lg" %>
+    <%= link_to "Login", login_path, class: "btn btn-info btn-lg" %>
   </div>
 </div>
