--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,8 +14,10 @@
             <h5 class="card-title text-success"><%= article.title %></h5>
             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
             <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
-            <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
-            <%= link_to 'Delete', article_path(article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %>
+            <% if logged_in? && article.user == current_user %>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to 'Delete', article_path(article), class: "btn btn-outline-danger", method: :delete, data: { confirm: "Are you sure you want to delete this article?" } %>
+            <% end %>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
