--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,12 @@
 
 <%= gravatar_for @user, size: 200 %>
 
+<% if logged_in? && @user == current_user %>
+  <div class="d-flex justify-content-center mt-4">
+    <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-outline-info" %>
+  </div>
+<% end %>
+
 <h3 class="text-center my-4">Articles</h3>
 
 <%= render "articles/article" %>
