--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,6 +9,11 @@
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-header font-italic">
             by <%= article.user.username %>
+            <% if article.categories.any? %>
+              <div class="mt-2">
+                <%= render article.categories %>
+              </div>
+            <% end %>
           </div>
           <div class="card-body">
             <h5 class="card-title text-success"><%= article.title %></h5>
