--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,11 @@
 <h1 class="text-center my-4">Category: <%= @category.name %></h1>
+
+<% if logged_in? && current_user.admin? %>
+  <div class="d-flex justify-content-center mt-4">
+    <%= link_to 'Edit Category', edit_category_path(@category), class: "btn btn-outline-info" %>
+  </div>
+<% end %>
+
+<h3 class="text-center my-4">Articles</h3>
+
+<%= render "articles/article" %>
