Update category link

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -4,5 +4,5 @@
 </div>
 
 <div class="text-center">
-  <%= link_to '[ Cancel and return to category ]' , articles_path, class: "text-info" %>
+  <%= link_to '[ Cancel and return to category ]' , category_path(@category), class: "text-info" %>
 </div>
