--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -4,5 +4,5 @@
 </div>
 
 <div class="text-center">
-  <%= link_to '[ Cancel and return to articles listing ]' , articles_path, class: "text-info" %>
+  <%= link_to '[ Cancel and return to categories listing ]' , categories_path, class: "text-info" %>
 </div>
